--- a/html/mapControls.html
+++ b/html/mapControls.html
@@ -2,14 +2,18 @@
   <div w3-include-html="html/mapControls.html"></div>
 -->
 
-
-
         <div id="leyenda" class="leyendaHover">
-          <p>Mapas: Uso de Suelo alrededor de Puerto Maldonado <i>Ver la leyenda completa</i></p>
+          <p style="margin-bottom: 0;">
+            <- Mapas: Uso de suelo alrededor de Puerto Maldonado 
+            <br><small>Ver la leyenda completa</small>
+          </p>
+
           <div id="leyendaMin">
-            <img src="static/images/leyenda.png" height="90%" alt="Leyenda" />
+            <img src="static/images/leyenda.png" style="max-height:10vh;" alt="Leyenda" />
           </div>
+
           <div id="leyendaIntegral">
-            <img src="static/images/leyenda_integral.png" alt="Leyenda" />
+            <img src="static/images/leyenda_integral.png" style="max-height:10vh;" alt="Leyenda" />
           </div>
+
         </div>
