--- a/html/tab_servicios.html
+++ b/html/tab_servicios.html
@@ -3,22 +3,25 @@
 -->
 
 <h5>Calidad de Agua</h5>
-<p>Retención de Sedimentos: La vegetación retiene el suelo, evitando que  los sedimentos sean depositados en el rio y disminuyan la calidad del agua. El mapeo de sedimentos a los drenajes,  es de particular interés para el manejo de represas y embalses, plantas de tratamiento, costos de su potabilización, evita los altos costos en operación y mantenimiento asociados al dragado</p>
+<p>Retención de Sedimentos: La vegetación retiene el suelo, evitando que  los sedimentos sean depositados en el rio y disminuyan la calidad del agua. El mapeo de sedimentos a los drenajes,  es de particular interés para el manejo de represas y embalses, plantas de tratamiento, costos de su potabilización, evita los altos costos en operación y mantenimiento asociados al dragado.
 <a href='work in progress'>Descargar resultados</a>
-
+</p>
 <h5>Carbono</h5>
-<p>Los gases de invernadero podrían reducirse a través de dos procesos: reducción de emisiones antropogénicas de CO2 o creación y/o mejoramiento de los sumideros de carbono en la biosfera.  El Stock de carbono se estima en función del uso-cobertura de suelo, el Almacenamiento indica la masa de carbono en un paisaje en cualquier punto dado en el tiempo, Captura indica el cambio en el almacenamiento de carbón a través del tiempo y la valoración se aplica a la captura.</p>
+<p>Los gases de invernadero podrían reducirse a través de dos procesos: reducción de emisiones antropogénicas de CO2 o creación y/o mejoramiento de los sumideros de carbono en la biosfera.  El Stock de carbono se estima en función del uso-cobertura de suelo, el Almacenamiento indica la masa de carbono en un paisaje en cualquier punto dado en el tiempo, Captura indica el cambio en el almacenamiento de carbón a través del tiempo y la valoración se aplica a la captura.
 <a href='work in progress'>Descargar resultados</a>
-
+</p>
 
 <h5>Inundaciones</h5>
-<p>Mitigacion de riesgo de Inundaciones. Los humedales, los bosques y la vegetación ribereña reducen los riesgos a inundaciones y sequías, también es importante conocer  cómo ellos proveen otros beneficios.</p>
+<p>Mitigacion de riesgo de Inundaciones. Los humedales, los bosques y la vegetación ribereña reducen los riesgos a inundaciones y sequías, también es importante conocer  cómo ellos proveen otros beneficios.
 <a href='work in progress'>Descargar resultados</a>
+</p>
 
 <h5>Salud</h5>
-<p>El aumento de hábitats de mosquitos en la Amazonia es una amenaza de crecimiento de enfermedades transmitidas por estos vectores (como el dengue, chikungunya y zika), que impacta tanto a la  salud pública, como en el sector de turismo...</p>
+<p>El aumento de hábitats de mosquitos en la Amazonia es una amenaza de crecimiento de enfermedades transmitidas por estos vectores (como el dengue, chikungunya y zika), que impacta tanto a la  salud pública, como en el sector de turismo...
 <a href='work in progress'>Descargar resultados</a>
+</p>
 
 <h5>Turismo</h5>
-<p>La recreación y el turismo son componentes importantes de muchas economías nacionales y locales y contribuyen de innumerables formas al bienestar físico, el aprendizaje y la calidad de vida de los habitantes.</p>
+<p>La recreación y el turismo son componentes importantes de muchas economías nacionales y locales y contribuyen de innumerables formas al bienestar físico, el aprendizaje y la calidad de vida de los habitantes.
 <a href='work in progress'>Descargar resultados</a>
+</p>
