tabs contents guturoPEM

--- a/futuroPEM.html
+++ b/futuroPEM.html
@@ -78,7 +78,7 @@
         </div>
 
         <div id="Modelos" class="tabcontent">
-          <p>Modelos WIP</p> 
+          <div w3-include-html="html/tab_method.html"></div>
         </div>
 
         <div id="Escenarios" class="tabcontent">
