Pampa fixed zoomed

--- a/pampa.html
+++ b/pampa.html
@@ -21,7 +21,7 @@
         <div>
           <iframe
             style="width: 100%; height: 90vh;"
-            src="https://charlotte.users.earthengine.app/view/pampa"
+            src="https://charlotte.users.earthengine.app/view/pampa1"
           ></iframe>
         </div>
       </div>
@@ -34,3 +34,4 @@
   </body>
   <script type="module" src="js/navbar/navbar.lit.js"></script>
 </html>
+
