pointer is looking DOPE so jazzed

--- a/futuroPEM.html
+++ b/futuroPEM.html
@@ -122,7 +122,7 @@
   <script type="module" src="js/navbar/navbar.lit.js"></script>
   <script type="module" src="js/futuroPem.lit.js"></script>
   <script type="module" src="js/control_panel/barChart.js"></script>
-
+  <script src="js/pointer/index.js"></script>
   <script src="lib/js/L.Map.Sync.js"></script>
   <script src="js/map/canvasLayer.js"></script>
   <script src="js/mapsPEM.js"></script>
