pointer display unit is working

--- a/futuroPEM.html
+++ b/futuroPEM.html
@@ -116,7 +116,7 @@
       <div id="chartPEM"></div>
     </div>
   </body>
-
+  <div id="mouse_tip"></div>
   <script src="js/chartPEM.js"></script>
 
   <script type="module" src="js/navbar/navbar.lit.js"></script>
