mousetip functions bueno

--- a/futuroPEM.html
+++ b/futuroPEM.html
@@ -125,5 +125,6 @@
   <script src="js/pointer/index.js"></script>
   <script src="lib/js/L.Map.Sync.js"></script>
   <script src="js/map/canvasLayer.js"></script>
+  <script src="js/pointer/colorMapFuturo.js"></script>
   <script src="js/mapsPEM.js"></script>
 </html>
