fixed CSS futuro

--- a/template.html
+++ b/template.html
@@ -15,7 +15,26 @@
   <body class="bg-black-60 white-80 avenir fw5">
     <nav id="navbar"></nav>
 
-    <p> Poo poo pi doo </p>
+    <h1> Salud </h1>
+    <h5> análisis en progreso, <a href="https://ccb.stanford.edu/christopher-anderson" target="_blank">para la cartografía de la temperatura, la capa de nubes, el índice de área de la hoja</a>
+
+    <a href="https://code.earthengine.google.com/6d293791191579d983dcf1c5ac2c7477" target="_blank">Codigo Google Earth Engine para la cartografía de la temperatura, la capa de nubes, el índice de área de la hoja</a>
+
+    <a href="https://code.earthengine.google.com/6d293791191579d983dcf1c5ac2c7477" target="_blank">https://github.com/christobal54/mosquito-mapping</a>
+
+    <a href="https://code.earthengine.google.com/6d293791191579d983dcf1c5ac2c7477" target="_blank">Codigo Google Earth Engine para la cartografía de la temperatura, la capa de nubes, el índice de área de la hoja</a>
+
+    <a href="https://code.earthengine.google.com/6d293791191579d983dcf1c5ac2c7477" target="_blank">Codigo Google Earth Engine para la cartografía de la temperatura, la capa de nubes, el índice de área de la hoja</a>
+
+    mi repositorio para ejecutar mis análisis
+    https://github.com/christobal54/mosquito-mapping
+
+    y mi repositorio para correr modelos de distribución de especies.
+    https://github.com/stanford-ccb/ccb
+
+    https://photos.google.com/share/AF1QipNm5MOjTHjWZH3J4Gkt6zdy4wLVukfDM0Pd2q1-HkSGj1iy02Yhyg9Zhkkc6gRP1w?key=czBOZXZzWmxIZnJzWTBaT1Z5Zl94OF9hcEZiaEJ3
+
+
   </body>
  
 
