--- a/futuroPEM.html
+++ b/futuroPEM.html
@@ -40,7 +40,9 @@
   </head>
 
   <body>
-    <nav id="navbar"></nav>
+    <nav id="navbar">
+      <div w3-include-html="html/navbar.html"></div>
+    </nav>
 
     <div class="w3-twothird" id="maps">
       <div id="map1" class="map"></div>
@@ -105,7 +107,7 @@
 
   <script src="js/chartPEM.js"></script>
 
-  <script type="module" src="js/navbar/navbar.lit.js"></script>
+  <!--<script type="module" src="js/navbar/navbar.lit.js"></script>-->
   <script type="module" src="js/futuroPem.lit.js"></script>
   <script type="module" src="js/control_panel/barChart.js"></script>
 
