--- a/amazonia.html
+++ b/amazonia.html
@@ -7,12 +7,10 @@
 <html>
 <head>
   <!-- Needed for Navbar-->
-  <link rel="stylesheet" href="lib/css/tachyons.min.css" />
-  <link rel="stylesheet" href="css/dropdown.css" />
-  <link
-  rel="stylesheet"
-  href="https://www.w3schools.com/lib/w3-theme-black.css"
-  />
+    <link rel="stylesheet" href="lib/css/tachyons.min.css" />
+    <link rel="stylesheet" href="css/dropdown.css" />
+    <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css" />
+    <script src="lib/js/includehtml.js"></script>
 
   <!-- Custom CSS -->
   <link rel="stylesheet" href="css/styleMAP.css"/>
@@ -29,7 +27,9 @@
 </head>
 
 <body class="bg-black-80 white avenir fw5">
-  <nav id="navbar"></nav>
+  <nav id="navbar">
+      <div w3-include-html="html/navbar.html"></div>
+  </nav>
 
   <div class="w3-third">
     <h5 style="padding: 20px;">
@@ -64,5 +64,5 @@ src="https://conservation.maps.arcgis.com/apps/MapSeries/index.html?appid=548c9e
 ></iframe>
 </body>
 
-<script type="module" src="js/navbar/navbar.lit.js"></script>
+  <script>includeHTML();</script>
 </html>
