--- a/pampa.html
+++ b/pampa.html
@@ -4,8 +4,8 @@
     <!-- Needed for Navbar-->
     <link rel="stylesheet" href="lib/css/tachyons.min.css" />
     <link rel="stylesheet" href="css/dropdown.css" />
-    <link rel="stylesheet" href="https://www.w3schools.com/lib/w3-theme-black.css"/>
-
+    <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css" />
+    <script src="lib/js/includehtml.js"></script>
 
     <!-- Vega for Altair plots -->
     <script src="https://cdn.jsdelivr.net/npm/vega@5"></script>
@@ -15,7 +15,9 @@
   </head>
 
   <body class="bg-black-90 white-80 avenir fw5">
-    <nav id="navbar"></nav>
+    <nav id="navbar">
+      <div w3-include-html="html/navbar.html"></div>
+    </nav>
     <div class="flex">
       <div class="w-70">
         <div>
@@ -32,6 +34,6 @@
       </div>
     </div>
   </body>
-  <script type="module" src="js/navbar/navbar.lit.js"></script>
+  <script>includeHTML();</script>
 </html>
 
