--- a/template.html
+++ b/template.html
@@ -5,39 +5,28 @@
 
 <html>
   <head>
-  	<!-- Needed for Navbar-->
+  	
+    <!-- Needed for Navbar-->
     <link rel="stylesheet" href="lib/css/tachyons.min.css" />
     <link rel="stylesheet" href="css/dropdown.css" />
-	<link rel="stylesheet" href="https://www.w3schools.com/lib/w3-theme-black.css"/>
+    <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css" />
+    <script src="lib/js/includehtml.js"></script>
+
   </head>
 
 
   <body class="bg-black-60 white-80 avenir fw5">
-    <nav id="navbar"></nav>
+    <nav id="navbar">
+      <div w3-include-html="html/navbar.html"></div>
+    </nav>
 
-    <h1> Salud </h1>
-    <h5> análisis en progreso, <a href="https://ccb.stanford.edu/christopher-anderson" target="_blank">para la cartografía de la temperatura, la capa de nubes, el índice de área de la hoja</a>
-
-    <a href="https://code.earthengine.google.com/6d293791191579d983dcf1c5ac2c7477" target="_blank">Codigo Google Earth Engine para la cartografía de la temperatura, la capa de nubes, el índice de área de la hoja</a>
-
-    <a href="https://code.earthengine.google.com/6d293791191579d983dcf1c5ac2c7477" target="_blank">https://github.com/christobal54/mosquito-mapping</a>
-
-    <a href="https://code.earthengine.google.com/6d293791191579d983dcf1c5ac2c7477" target="_blank">Codigo Google Earth Engine para la cartografía de la temperatura, la capa de nubes, el índice de área de la hoja</a>
-
-    <a href="https://code.earthengine.google.com/6d293791191579d983dcf1c5ac2c7477" target="_blank">Codigo Google Earth Engine para la cartografía de la temperatura, la capa de nubes, el índice de área de la hoja</a>
-
-    mi repositorio para ejecutar mis análisis
-    https://github.com/christobal54/mosquito-mapping
-
-    y mi repositorio para correr modelos de distribución de especies.
-    https://github.com/stanford-ccb/ccb
-
-    https://photos.google.com/share/AF1QipNm5MOjTHjWZH3J4Gkt6zdy4wLVukfDM0Pd2q1-HkSGj1iy02Yhyg9Zhkkc6gRP1w?key=czBOZXZzWmxIZnJzWTBaT1Z5Zl94OF9hcEZiaEJ3
+    <h1> yo</h1>
 
 
   </body>
  
 
+  <script>includeHTML();</script>
 
-  <script type="module" src="js/navbar/navbar.lit.js"></script>
+  <!--<script type="module" src="js/navbar/navbar.lit.js"></script>-->
 </html>
