--- a/MAP.html
+++ b/MAP.html
@@ -4,11 +4,24 @@
 
 <html>
 	<head>
-		<!-- Needed for Navbar-->
-	    <link rel="stylesheet" href="lib/css/tachyons.min.css" />
-	    <link rel="stylesheet" href="css/dropdown.css" />
-	    <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css" />
-	    <script src="lib/js/includehtml.js"></script>
+	
+	<!-- Needed for Navbar-->
+    <link rel="stylesheet" href="lib/css/tachyons.min.css" />
+    <link rel="stylesheet" href="css/dropdown.css" />
+    <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css" />
+    <link rel="stylesheet" href="css/overlay.css" />
+    <script src="lib/js/includehtml.js"></script>
+    <!-- About Overlay -->
+    <div id="myNav" class="overlay">
+      <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
+      <div class="overlay-content">
+        <div w3-include-html="about.html"></div>
+      </div>
+    </div>
+    <!-- End Of About Overlay -->
+    <!-- JQuery -->
+    <script src="https://code.jquery.com/jquery-3.3.1.js"   integrity="sha256-2Kok7MbOyxpgUVvAk/HJ2jigOSYS2auK4Pfzbm7uH60="   crossorigin="anonymous"></script>
+    <!-- End Of: Needed for Navbar-->
 	
 
 	<meta name="viewport" content="initial-scale=1.0, user-scalable=no" />
@@ -235,7 +248,9 @@
 	 <script src='js/MAP/main.js'> </script>
 	 <script src='js/MAP/tabs.js'> </script>
 	
+  <!-- Needed for Navbar-->
   <script>includeHTML();</script>
+  <script src="js/overlay.js"></script>
 
 	
 	</body>
