--- a/html/navbar.html
+++ b/html/navbar.html
@@ -28,7 +28,7 @@
       <a href="MAP.html" class="link white hover-bg-dark-gray bg-black pb2 db">
       Region tri-nacional MAP </a>
       
-      <a href="MAP.html" class="link white hover-bg-dark-gray bg-black pb2 db">
+      <a href="amazonia.html" class="link white hover-bg-dark-gray bg-black pb2 db">
       Todo el basin Amazonico </a>
 
       </div>
@@ -39,7 +39,7 @@
       ⓘ    
     </a>
 
-    <a href="#" class="link white hover-bg-dark-gray fr pa3">
+    <a href="#" onclick="openNav();" class="link white hover-bg-dark-gray fr pa3">
       About 
     </a>
 
