--- a/futuroPEM.html
+++ b/futuroPEM.html
@@ -6,6 +6,7 @@
 
 <html>
   <head>
+    <title>Prototipo de Visualizador PRO Agua</title>
 
     <!-- Needed for Navbar-->
     <link rel="stylesheet" href="lib/css/tachyons.min.css" />
