--- a/pampa.html
+++ b/pampa.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
+    <title>Prototipo de Visualizador PRO Agua: La Pampa</title>
     <!-- - - - - - - - -  -->
     <!-- Needed for Navbar-->
     <link rel="stylesheet" href="lib/css/tachyons.min.css" />
