--- a/futuroTAH.html
+++ b/futuroTAH.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
+    <title>Prototipo de Visualizador PRO Agua: Tahuamanu-Cobija</title>
       <!-- Needed for Navbar-->
     <link rel="stylesheet" href="lib/css/tachyons.min.css" />
     <link rel="stylesheet" href="css/dropdown.css" />
