about contents draft

--- a/about.html
+++ b/about.html
@@ -1,1 +1,142 @@
-<h1> About contents (Hello Adrian!) </h1>
+<head>
+	  <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+</head>
+
+
+
+
+ 
+<body>
+
+<style>
+	.icon{
+		font-size: -webkit-xxx-large;
+		color:#7fc46f;
+	}
+
+	em {
+		color: #7fc46f;
+	    font-style: inherit;
+	    /*font-weight: 600;*/
+	}
+</style>
+
+
+<div class="w3-row w3-container">
+	<h1> Sobre el proyecto PRO Agua </h1>
+	<p><i> Este visualizador esta en desarollado. Por favor reportar errores y enviar sugerencias <a href='mailto:chweil@stanford.edu'>aqui</a>.</i></p>
+</div>
+
+<div class="w3-row">
+	<div class="w3-third w3-container">
+		<i class="material-icons icon">cloud_queue</i></h1>
+		<h2>Antecedentes</h2>
+		<p>El crecimiento de los asentamientos humanos y de las ciudades en la Amazonía ha impactado severamente a los bosques y a los ecosistemas, además los impactos han crecido exponencialmente durante la última década. El desarrollo sin planificación se está expandiendo rápidamente en centros urbanos como Puerto Maldonado (Perú) y Río Branco (Brasil) y en las comunidades rurales circundantes, lo que conduce a la <em>deforestación</em> y agrava los efectos de graves <em>inundaciones y sequías</em>. Estas cuencas por lo tanto están experimentando una mayor amenaza para la sociedad y el turismo debido a la falta de <em>planificación</em>, incluyendo la baja <em>calidad del agua</em>, el aumento de las inundaciones y el aumento del riesgo de <em>enfermedades</em> transmitidas por mosquitos como el zika y el dengue. </p>
+	</div>
+	<div class="w3-third w3-container">
+		<i class="material-icons icon">wifi_tethering</i></h1>
+		<h2>Objetivos</h2>
+		<p>El proyecto <em>PRO-Agua (Proyecto Resiliencia y Ordenamiento Territorial del Agua)</em> surgió del reconocimiento y necesidad de que el <em>desarrollo sostenible</em> sea tomado seriamente por los tomadores de decisiones en el sur-oeste amazónico, necesitamos demostrar claramente los <em>beneficios de las áreas naturales</em> para la salud y el bienestar de sus poblaciones en vías de crecimiento. Este proyecto de dos años de duración se centra en la integración de la infraestructura verde en la gestión de las cuencas hidrográficas a través de la ciencia y la tecnología, la creación de capacidad y el empoderamiento de los líderes. </p>
+	</div>
+	<div class="w3-third w3-container">
+		<i class="material-icons icon">list</i></h1>
+		<h2>Proceso</h2>
+		<p>La <em>modelación espacial</em> y los <em>mapas</em> son fundamentales para nuestras evaluaciones de la capacidad de la vegetación natural para reducir los riesgos de sequía e inundaciones. En colaboración con los actores locales del gobierno, instituciones, investigadores y ONGs, desarrollamos dos visiones (positiva y negativa) de posibles futuros para la región. Utilizamos herramientas como el software InVEST para analizar los servicios de los ecosistemas que resultan de estos futuros potenciales. A través de estos métodos y compartiendo los resultados de nuestro trabajo, esperamos entender mejor cómo los bosques, la vegetación ribereña y los humedales proporcionan servicios ecosistémicos a los centros urbanos de la Amazonía y su valor va mucho más allá.</p>
+	</div>
+</div>
+
+<div class="w3-row w3-container">
+		<img src="static/photos/equipo.JPG" alt="Equipo PRO Agua" />
+</div>
+
+<div class="w3-row w3-container">
+	<h2> Recursos</h2>
+</div>
+
+<div class="w3-row">
+	<div class="w3-half w3-container">
+		<h3><em> Boletín de informacion</h3></em>
+		<ul><li><a href="static/pdfs/Newsletter_SummerFall18__ES_final.pdf" download> Verano-Otoño 2018</li></a>
+			<li> Primavera 2019</li></ul>
+	</div>
+
+	<div class="w3-half w3-container">
+		<h2> </h2>
+		<h3><em> Posters</h3></em>
+		<ul>
+			<li><a href="static/pdfs/poster_introES.pdf" download> Introduccion al proyecto</li></a>
+			<li><a href="static/pdfs/poster_escenariosES.pdf" download> Desarrolado de escenarios</li></a>
+		</ul>
+	</div>
+</div>
+
+<div class="w3-row w3-container">
+	<h2>¿Quien somos?</h2>
+
+	<div class="w3-row">
+	<div class="w3-quarter">
+		<img src="static/photos/av.jpg" alt="Pic" style="width:45%" class="w3-circle w3-hover-opacity">
+		<h3>Adrian Vogl</h3>
+		<div class="center w3-text-grey"><i>Líder del proyecto</i></div>
+	</div>
+
+	<div class="w3-quarter">
+		<img src="static/photos/mg.jpg" alt="Pic" style="width:45%" class="w3-circle w3-hover-opacity">
+		<h3>Marcelo Guevara</h3>
+		<div class="center w3-text-grey"><i>Titulo</i></div>
+	</div>
+
+	<div class="w3-quarter">
+		<img src="static/photos/cw.png" alt="Pic" style="width:45%" class="w3-circle w3-hover-opacity">
+		<h3>Charlotte Weil</h3>
+		<div class="center w3-text-grey"><i>Titulo</i></div>
+	</div>
+
+	<div class="w3-quarter">
+		<img src="static/photos/lf.jpg" alt="Pic" style="width:45%" class="w3-circle w3-hover-opacity">
+		<h3>Luis Fernandez</h3>
+		<div class="center w3-text-grey"><i>Titulo</i></div>
+	</div>
+	
+	</div>
+
+	<div class="w3-row">
+	<div class="w3-quarter">
+		<img src="static/photos/lf.jpg" alt="Pic" style="width:45%" class="w3-circle w3-hover-opacity">
+		<h3>Marta Torres</h3>
+		<div class="center w3-text-grey"><i>Titulo</i></div>
+	</div>
+
+	<div class="w3-quarter">
+		<img src="static/photos/lf.jpg" alt="Pic" style="width:45%" class="w3-circle w3-hover-opacity">
+		<h3>Jorge Caballero</h3>
+		<div class="center w3-text-grey"><i>Titulo</i></div>
+	</div>
+
+	<div class="w3-quarter">
+		<img src="static/photos/lf.jpg" alt="Pic" style="width:45%" class="w3-circle w3-hover-opacity">
+		<h3>Martin Picalla</h3>
+		<div class="center w3-text-grey"><i>Titulo</i></div>
+	</div>
+
+	<div class="w3-quarter center w3-text-grey">
+		<p>y Rafaël Schmitt, Christopher Anderson, ....</p>
+	</div>
+
+	</div>
+
+	<div class="w3-row">
+		<h3>LOGOS GO HERE</h3>
+	</div>
+</div>
+
+
+<div class="w3-row w3-container">
+		<h3> + Enlaces a facebook+otras estudios...</h3>
+</div>
+
+<center>
+			<p><input type="submit" name="submit" value="Cerrar" onClick="closeNav()" style="color: black;" /></p>
+</center>
+
+</body>
