--- a/about.html
+++ b/about.html
@@ -1,5 +1,6 @@
 <head>
 	  <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+
 </head>
 
 
@@ -54,13 +55,13 @@
 </div>
 
 <div class="w3-row">
-	<div class="w3-half w3-container">
+	<div class="w3-quarter w3-container">
 		<h3><em> Boletín de informacion</h3></em>
 		<ul><li><a href="static/pdfs/Newsletter_SummerFall18__ES_final.pdf" download> Verano-Otoño 2018</li></a>
 			<li> Primavera 2019</li></ul>
 	</div>
 
-	<div class="w3-half w3-container">
+	<div class="w3-quarter w3-container">
 		<h2> </h2>
 		<h3><em> Posters</h3></em>
 		<ul>
@@ -68,75 +69,98 @@
 			<li><a href="static/pdfs/poster_escenariosES.pdf" download> Desarrolado de escenarios</li></a>
 		</ul>
 	</div>
+
+	<div class="w3-quarter w3-container">
+		<h3><em>Banco de Datos</h3></em>
+		<a target="_blank" href="https://drive.google.com/drive/folders/13gdtuhu9f2yh1gvr-Pw32Sevclia_Xlv"><i class="material-icons">archive</i>
+		El Banco de datos </a> es un recurso colaborativo, accesible a cualquier persona interesada. Contiene datos espaciales relevantes para la zona MAP.
+	</div>
+
+	<div class="w3-quarter w3-container">
+		<h3><em> Contacto</h3></em>
+		<a target="_blank" href="https://www.facebook.com/proagua.natcap.cincia/">¡Síguenos en Facebook!
+		<img class="logo responsive-img" src="static/logos/fb.png" width="50px" style="padding:5px;"></a> <br>
+		<a href="mailto:marceloguevara@stanford.edu">Correo</a>
+	</div>
 </div>
 
 <div class="w3-row w3-container">
 	<h2>¿Quien somos?</h2>
 
+	<div class="w3-row w3-center">
+		<img src="static/logos/natcap.png" style="height: 190px; padding:20px" alt="Logo NatCap">
+		<img src="static/logos/moorew.png" style="height: 150px; padding:20px" alt="Logo Moore">
+		<img src="static/logos/cincia.png" style="height: 150px; padding:20px" alt="Logo Cincia">
+		<br>
+
+		<div class="w3-half w3-container"><p>En NatCap trabajamos para integrar el valor que la naturaleza proporciona a la sociedad en todas las decisiones importantes. Nuestro objetivo final es mejorar el bienestar de todas las personas y de la naturaleza motivando mayores y más específicas inversiones de capital natural.</p></div>
+		<div class="w3-half w3-container"><p>Cincia promueve el mejoramiento de la capacidad investigativa de la realidad ambiental y social y su aplicación en la gestión sostenible, mediante la incidencia en la toma de decisiones, la difusión del conocimiento científico y la innovación tecnológica para el desarrollo de propuestas y prácticas sostenibles
+
+</p></div>
+	</div>
+
+
+
 	<div class="w3-row">
-	<div class="w3-quarter">
+	<div class="w3-col s2 w3-center">
 		<img src="static/photos/av.jpg" alt="Pic" style="width:45%" class="w3-circle w3-hover-opacity">
-		<h3>Adrian Vogl</h3>
+		<h5>Adrian Vogl</h5>
 		<div class="center w3-text-grey"><i>Líder del proyecto</i></div>
 	</div>
 
-	<div class="w3-quarter">
+	<div class="w3-col s2 w3-center">
 		<img src="static/photos/mg.jpg" alt="Pic" style="width:45%" class="w3-circle w3-hover-opacity">
-		<h3>Marcelo Guevara</h3>
+		<h5>Marcelo Guevara</h5>
 		<div class="center w3-text-grey"><i>Titulo</i></div>
 	</div>
 
-	<div class="w3-quarter">
+	<div class="w3-col s2 w3-center">
 		<img src="static/photos/cw.png" alt="Pic" style="width:45%" class="w3-circle w3-hover-opacity">
-		<h3>Charlotte Weil</h3>
+		<h5>Charlotte Weil</h5>
 		<div class="center w3-text-grey"><i>Titulo</i></div>
 	</div>
 
-	<div class="w3-quarter">
+	<div class="w3-col s2 w3-center">
 		<img src="static/photos/lf.jpg" alt="Pic" style="width:45%" class="w3-circle w3-hover-opacity">
-		<h3>Luis Fernandez</h3>
-		<div class="center w3-text-grey"><i>Titulo</i></div>
-	</div>
-	
-	</div>
-
-	<div class="w3-row">
-	<div class="w3-quarter">
-		<img src="static/photos/lf.jpg" alt="Pic" style="width:45%" class="w3-circle w3-hover-opacity">
-		<h3>Marta Torres</h3>
+		<h5>Luis Fernandez</h5>
 		<div class="center w3-text-grey"><i>Titulo</i></div>
 	</div>
 
-	<div class="w3-quarter">
-		<img src="static/photos/lf.jpg" alt="Pic" style="width:45%" class="w3-circle w3-hover-opacity">
-		<h3>Jorge Caballero</h3>
+	<div class="w3-col s2 w3-center">
+		<img src="static/photos/mt.png" alt="Pic" style="width:45%" class="w3-circle w3-hover-opacity">
+		<h5>Marta Torres</h5>
 		<div class="center w3-text-grey"><i>Titulo</i></div>
 	</div>
 
-	<div class="w3-quarter">
-		<img src="static/photos/lf.jpg" alt="Pic" style="width:45%" class="w3-circle w3-hover-opacity">
-		<h3>Martin Picalla</h3>
+	<div class="w3-col s2 w3-center">
+		<img src="static/photos/jc.png" alt="Pic" style="width:45%" class="w3-circle w3-hover-opacity">
+		<h5>Jorge Caballero</h5>
+		<div class="center w3-text-grey"><i>Titulo</i></div>
+	</div>
+
+	<div class="w3-col s2 w3-center">
+		<img src="static/photos/mp.png" alt="Pic" style="width:45%" class="w3-circle w3-hover-opacity">
+		<h5>Martin Pillaca</h5>
 		<div class="center w3-text-grey"><i>Titulo</i></div>
 	</div>
 
 	<div class="w3-quarter center w3-text-grey">
-		<p>y Rafaël Schmitt, Christopher Anderson, ....</p>
+		<br>
+		<p>y Rafaël Schmitt, Christopher Anderson...</p>
 	</div>
 
 	</div>
 
-	<div class="w3-row">
-		<h3>LOGOS GO HERE</h3>
-	</div>
-</div>
-
-
-<div class="w3-row w3-container">
-		<h3> + Enlaces a facebook+otras estudios...</h3>
 </div>
 
 <center>
-			<p><input type="submit" name="submit" value="Cerrar" onClick="closeNav()" style="color: black;" /></p>
+			<h5><input type="submit" name="submit" value="Regresar al sitio" onClick="closeNav()" style="color: black;" /></h5>
+
 </center>
+<br><br><br>
+<div class="w3-row w3-container">
+		<img src="static/photos/equipo2.JPG" alt="Equipo PRO Agua" />
+</div>
+
 
 </body>
