--- a/pampa.html
+++ b/pampa.html
@@ -42,10 +42,14 @@
           ></iframe>
         </div>
       </div>
-      <div class="w-30">
+      <div class="w-30" id="rightPanelPampa">
         <div id="text" class="measure pa3">
           Background (media links?) + Concept note on the proposed analysis on optimizing reforestation strategy in La Pampa (Luis?)
         </div>
+        <br>
+        <h3> Vuelo sobre Madre de Dios minerias: <i> La Pampa</i> (2018)</h3> 
+        <embed src="https://youtube.com/embed/gLHKF12sufA" allowfullscreen="true" width="492" height="289"> 
+
       </div>
     </div>
   </body>
