--- a/pampa.html
+++ b/pampa.html
@@ -1,4 +1,7 @@
 <!DOCTYPE html>
+<!-- To include Spanish accents -->
+<meta http-equiv="content-type" content="text/html;charset=utf-8"/>
+
 <html>
   <head>
     <title>Prototipo de Visualizador PRO Agua: La Pampa</title>
@@ -22,11 +25,9 @@
     <!-- End Of: Needed for Navbar-->
     <!-- - - - - - - - -  - - - - -->
 
-    <!-- Vega for Altair plots -->
-    <script src="https://cdn.jsdelivr.net/npm/vega@5"></script>
-    <script src="https://cdn.jsdelivr.net/npm/vega-lite@3"></script>
-    <script src="https://cdn.jsdelivr.net/npm/vega-embed@4"></script>
-    
+    <link rel="stylesheet" href="css/style.css" />
+
+
   </head>
 
   <body class="bg-black-90 white-80 avenir fw5">
@@ -42,13 +43,28 @@
           ></iframe>
         </div>
       </div>
-      <div class="w-30" id="rightPanelPampa">
-        <div id="text" class="measure pa3">
-          Background (media links?) + Concept note on the proposed analysis on optimizing reforestation strategy in La Pampa (Luis?)
-        </div>
-        <br>
-        <h3> Vuelo sobre Madre de Dios minerias: <i> La Pampa</i> (2018)</h3> 
-        <embed src="https://youtube.com/embed/gLHKF12sufA" allowfullscreen="true" width="492" height="289"> 
+      <div class="w-30 rightPanel" id="rightPanelPampa">
+
+          <h4> Contexto: <i> La Pampa</i></h4>
+          <p>La Pampa es un infierno creado por la minería ilegal de oro en Madre de Dios. La Pampa es la denominación de la zona situada entre los kilómetros 98 y 115 de la Carretera Interoceánica, en plena zona de amortiguamiento de la Reserva Nacional Tambopata, un desastre ambiental dentro de una de las selvas con más biodiversidad del mundo.
+          <a href="https://elcomercio.pe/peru/madre-de-dios/pampa-origen-enclave-mineria-ilegal-noticia-609033" target="_blank">Leer más en El Comercio. </a>
+          </p>
+
+          <h4> Estado de Emergencía</h4>
+          <p>El 19 de febrero de 2019 declaran a cuatro distritos de Madre de Dios en estado de emergencia por 60 días.
+            <a href="https://elcomercio.pe/peru/madre-de-dios/madre-dios-declaran-cuatro-distritos-emergencia-60-dias-noticia-609115" target="_blank">Leer más en El Comercio. </a>
+            <a href="https://busquedas.elperuano.pe/normaslegales/declaran-el-estado-de-emergencia-en-once-distritos-de-las-pr-decreto-supremo-n-034-2016-pcm-1383308-1/" target="_blank">Ver el Decreto supremo en El Peruano. </a>
+          </p>
+
+          <h4> Propuesta de analisis de reforestación optimal</h4>
+          <p><<<<<<<<<<<<<<[CONCEPT NOTE]>>>>>>>>>>>>>>>>>>>>>
+          </p>
+          <img src="static/logos/natcap.png" style="height: 10vh;" alt="Logo NatCap"><img src="static/logos/cincia.png" style="height: 10vh; padding:20px" alt="Logo Cincia">
+          <br>
+
+          <h4> Imagen: vuelo sobre Madre de Dios (2018)</h4>
+          <div id="video"><embed src="https://youtube.com/embed/gLHKF12sufA" allowfullscreen="true" style="padding:10px;"></div>
+          <br>
 
       </div>
     </div>
