Fixed pickEscenario (Nightmare, broken by Ian toggleMap replacement of updateMap2, but couldnt just revert commit because I had messy merged many commits together

--- a/futuroPEM.html
+++ b/futuroPEM.html
@@ -170,5 +170,5 @@
 
   <script src="lib/js/L.Map.Sync.js"></script>
   <script src="js/mapsPEM.js"></script>
-  <script src="js/pointer/index.js"></script>
+  <!--<script src="js/pointer/index.js"></script>-->
 </html>
