fix styles for about overlayNav  on futuroPEM

--- a/about.html
+++ b/about.html
@@ -5,10 +5,6 @@
 
 
 
-
- 
-<body>
-
 <style>
 	.icon{
 		font-size: -webkit-xxx-large;
@@ -20,12 +16,18 @@
 	    font-style: inherit;
 	    /*font-weight: 600;*/
 	}
+
+	/*.overlayNavio p,h1,h2,h3,h4,h5,a,li {
+		color: hsla(0,0%,100%,.8);
+	}*/
 </style>
+ 
+<div class="overlayNav white-80">
 
 
 <div class="w3-row w3-container">
-	<h1> Sobre el proyecto PRO Agua </h1>
-	<p><i> Este visualizador esta en desarollado. Por favor reportar errores y enviar sugerencias <a href='mailto:chweil@stanford.edu'>aqui</a>.</i></p>
+	<h1> Sobre el proyecto <em>[</em>PRO Agua<em>]</em> </h1>
+	<p><i> Este visualizador esta en desarollo. Por favor reportar errores y enviar sugerencias <a href='mailto:chweil@stanford.edu'>aqui</a>.</i></p>
 </div>
 
 <div class="w3-row">
@@ -72,15 +74,16 @@
 
 	<div class="w3-quarter w3-container">
 		<h3><em>Banco de Datos</h3></em>
-		<a target="_blank" href="https://drive.google.com/drive/folders/13gdtuhu9f2yh1gvr-Pw32Sevclia_Xlv"><i class="material-icons">archive</i>
-		El Banco de datos </a> es un recurso colaborativo, accesible a cualquier persona interesada. Contiene datos espaciales relevantes para la zona MAP.
+		<p><a target="_blank" href="https://drive.google.com/drive/folders/13gdtuhu9f2yh1gvr-Pw32Sevclia_Xlv"><i class="material-icons">archive</i>
+		El Banco de datos </a> es un recurso colaborativo, accesible a cualquier persona interesada. Contiene datos espaciales relevantes para la zona MAP.</p>
 	</div>
 
 	<div class="w3-quarter w3-container">
 		<h3><em> Contacto</h3></em>
-		<a target="_blank" href="https://www.facebook.com/proagua.natcap.cincia/">¡Síguenos en Facebook!
+		<p><a target="_blank" href="https://www.facebook.com/proagua.natcap.cincia/">¡Síguenos en Facebook!
 		<img class="logo responsive-img" src="static/logos/fb.png" width="50px" style="padding:5px;"></a> <br>
 		<a href="mailto:marceloguevara@stanford.edu">Correo</a>
+	</p>
 	</div>
 </div>
 
@@ -163,4 +166,4 @@
 </div>
 
 
-</body>
+</div>
