--- a/futuroPEM.html
+++ b/futuroPEM.html
@@ -73,7 +73,11 @@
     <link rel="stylesheet" href="css/tabs.css" />
   </head>
 
-  <body>
+
+
+
+  <body class="bg-white black">
+
     <nav id="navbar">
       <div w3-include-html="html/navbar.html"></div>
     </nav>
