--- a/futuroPEM.html
+++ b/futuroPEM.html
@@ -7,68 +7,45 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+
+
     <!-- Needed for Navbar-->
-    <link rel="stylesheet" href="lib/css/tachyons.min.css" />
     <link rel="stylesheet" href="css/dropdown.css" />
     <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css" />
     <link rel="stylesheet" href="css/overlay.css" />
-
     <script src="lib/js/includehtml.js"></script>
     <!-- About Overlay -->
     <div id="myNav" class="overlay">
-      <a href="javascript:void(0)" class="closebtn" onclick="closeNav()"
-        >&times;</a
-      >
+      <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
       <div class="overlay-content">
         <div w3-include-html="about.html"></div>
       </div>
     </div>
     <!-- End Of About Overlay -->
     <!-- JQuery -->
-    <script
-      src="https://code.jquery.com/jquery-3.3.1.js"
-      integrity="sha256-2Kok7MbOyxpgUVvAk/HJ2jigOSYS2auK4Pfzbm7uH60="
-      crossorigin="anonymous"
-    ></script>
+    <script src="https://code.jquery.com/jquery-3.3.1.js" integrity="sha256-2Kok7MbOyxpgUVvAk/HJ2jigOSYS2auK4Pfzbm7uH60=" crossorigin="anonymous" ></script>
     <!-- End Of: Needed for Navbar-->
 
+    <!-- Libs -->
     <!-- w3 style thingz -->
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css" />
-    <link
-      rel="stylesheet"
-      href="https://www.w3schools.com/lib/w3-theme-black.css"
-    />
-    <link
-      rel="stylesheet"
-      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.3.0/css/font-awesome.min.css"
-    />
+    <link rel="stylesheet" href="https://www.w3schools.com/lib/w3-theme-black.css"/>
+     <!-- icons -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.3.0/css/font-awesome.min.css"/>
+     <!-- tachyons -->
     <link rel="stylesheet" href="lib/css/tachyons.min.css" />
-    <link rel="stylesheet" href="css/dropdown.css" />
-
-    <!-- Leaflet CSS -->
-    <link
-      rel="stylesheet"
-      href="https://unpkg.com/leaflet@1.4.0/dist/leaflet.css"
-      integrity="sha512-puBpdR0798OZvTTbP4A8Ix/l+A4dHDD0DGqYW6RQ+9jxkRFclaxxQb/SJAWZfWAkuyeQUytO7+7N4QKrDh+drA=="
-      crossorigin=""
-    />
-
-    <script src="lib/js/includehtml.js"></script>
-    <script src="js/tabs.js"></script>
-
+    <!-- Leaflet -->
+    <script src="https://unpkg.com/leaflet@1.3.1/dist/leaflet.js"
+      crossorigin=""></script>
+    <link rel="stylesheet" href="https://unpkg.com/leaflet@1.4.0/dist/leaflet.css" integrity="sha512-puBpdR0798OZvTTbP4A8Ix/l+A4dHDD0DGqYW6RQ+9jxkRFclaxxQb/SJAWZfWAkuyeQUytO7+7N4QKrDh+drA==" crossorigin="" />
     <!--Needed for Chart D3.js/C3.js-->
     <script src="https://d3js.org/d3.v5.min.js"></script>
     <script src="lib/js/c3.min.js"></script>
     <link rel="stylesheet" href="lib/css/c3.min.css" />
 
-    <!-- Leaflet JS -->
-    <script
-      src="https://unpkg.com/leaflet@1.3.1/dist/leaflet.js"
-      crossorigin=""
-    ></script>
+    <script src="js/tabs.js"></script>
 
-    <!-- Leaflet JS -->
+    <!-- Custom CSS -->
     <link rel="stylesheet" href="css/style.css" />
     <link rel="stylesheet" href="css/tabs.css" />
   </head>
@@ -114,8 +91,7 @@
           <button
             id="defaultOpen"
             class="tablinks"
-            onclick="openTab(event, 'Servicios')"
-          >
+            onclick="openTab(event, 'Servicios')">
             Servicios Ecosistemicos
           </button>
           <button class="tablinks" onclick="openTab(event, 'Modelos')">
