--- a/futuroPEM.html
+++ b/futuroPEM.html
@@ -79,7 +79,7 @@
       <div id="intro_text">
         <p>
           Construyendo soluciones científicas para Madre de Dios: Evaluación de
-          escenarios de desarollo futuro
+          escenarios de desarollo futuro alrededor de Puerto Maldonado
         </p>
       </div>
 
@@ -133,10 +133,6 @@
   <script src="js/overlay.js"></script>
 
   <script src="js/chartPEM.js"></script>
-
-  <!--<script type="module" src="js/navbar/navbar.lit.js"></script>-->
-  <!-- <script type="module" src="js/futuroPem.lit.js"></script> -->
-  <script type="module" src="js/control_panel/barChart.js"></script>
 
   <script>
     // Tabs: Get the element with id="defaultOpen" and click on it
