--- a/html/tab_servicios.html
+++ b/html/tab_servicios.html
@@ -5,13 +5,13 @@
 <h5>Calidad de Agua</h5>
 <p>Retención de Sedimentos: La vegetación retiene el suelo, evitando que  los sedimentos sean depositados en el rio y disminuyan la calidad del agua. El mapeo de sedimentos a los drenajes,  es de particular interés para el manejo de represas y embalses, plantas de tratamiento, costos de su potabilización, evita los altos costos en operación y mantenimiento asociados al dragado.
 </p><p> Descargar resultados: 
-	<a href="static/pdfs/PANEL_PEM_SDR.jpg" download> Mapas de exportación de sedimentos</a>, <a href="https://drive.google.com/open?id=1z9K61p_NHR9eS_Eiryw52xgRW4Y-Uy5I" target="_blank"> Resultados crudos de InVEST SDR (rasters). </a>.
+	Mapas de exportación de sedimentos: <a href="static/pdfs/PANEL_PEM_SDR.jpg" download>PEM</a>, <a href="static/pdfs/PANEL_TAH_SDR.jpg" download>TAH</a>, <a href="https://drive.google.com/open?id=1z9K61p_NHR9eS_Eiryw52xgRW4Y-Uy5I" target="_blank"> Resultados crudos de InVEST SDR (rasters)</a>.
 </p>
 
 <h5>Carbono</h5>
 <p>Los gases de invernadero podrían reducirse a través de dos procesos: reducción de emisiones antropogénicas de CO2 o creación y/o mejoramiento de los sumideros de carbono en la biosfera.  El Stock de carbono se estima en función del uso-cobertura de suelo, el Almacenamiento indica la masa de carbono en un paisaje en cualquier punto dado en el tiempo, Captura indica el cambio en el almacenamiento de carbón a través del tiempo y la valoración se aplica a la captura.
 </p><p> Descargar resultados: 
-	<a href="static/pdfs/PANEL_PEM_CARBONO.jpg" download> Mapas de almacenamiento de Carbon</a>, <a href="https://drive.google.com/open?id=1MBvT4ypFJ8GJJK4UxDbUdRvIQci-Pf9C" target="_blank"> Resultados crudos de InVEST Carbono (rasters). </a>.
+	Mapas de almacenamiento de Carbon: <a href="static/pdfs/PANEL_PEM_CARBONO.jpg" download>PEM</a>, <a href="static/pdfs/PANEL_TAH_CARBONO.jpg" download>TAH</a>, <a href="https://drive.google.com/open?id=1MBvT4ypFJ8GJJK4UxDbUdRvIQci-Pf9C" target="_blank"> Resultados crudos de InVEST Carbono (rasters)</a>.
 </p>
 
 <h5>Inundaciones</h5>
