--- a/futuroTAH.html
+++ b/futuroTAH.html
@@ -1,9 +1,15 @@
 <!DOCTYPE html>
-<html>
+
+<html lang="es">
   <head>
-    <title>Prototipo de Visualizador PRO Agua: Tahuamanu-Cobija</title>
-      <!-- Needed for Navbar-->
-    <link rel="stylesheet" href="lib/css/tachyons.min.css" />
+    <meta http-equiv="content-type" content="text/html;charset=utf-8" />
+    <title>Prototipo de Visualizador PRO Agua</title>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+
+
+    <!-- Needed for Navbar-->
     <link rel="stylesheet" href="css/dropdown.css" />
     <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css" />
     <link rel="stylesheet" href="css/overlay.css" />
@@ -17,23 +23,122 @@
     </div>
     <!-- End Of About Overlay -->
     <!-- JQuery -->
-    <script src="https://code.jquery.com/jquery-3.3.1.js"   integrity="sha256-2Kok7MbOyxpgUVvAk/HJ2jigOSYS2auK4Pfzbm7uH60="   crossorigin="anonymous"></script>
+    <script src="https://code.jquery.com/jquery-3.3.1.js" integrity="sha256-2Kok7MbOyxpgUVvAk/HJ2jigOSYS2auK4Pfzbm7uH60=" crossorigin="anonymous" ></script>
     <!-- End Of: Needed for Navbar-->
-    
+
+    <!-- Libs -->
+    <!-- w3 style thingz -->
+    <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css" />
+    <link rel="stylesheet" href="https://www.w3schools.com/lib/w3-theme-black.css"/>
+     <!-- icons -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.3.0/css/font-awesome.min.css"/>
+     <!-- tachyons -->
+    <link rel="stylesheet" href="lib/css/tachyons.min.css" />
+    <!-- Leaflet -->
+    <script src="https://unpkg.com/leaflet@1.3.1/dist/leaflet.js"
+      crossorigin=""></script>
+    <link rel="stylesheet" href="https://unpkg.com/leaflet@1.4.0/dist/leaflet.css" integrity="sha512-puBpdR0798OZvTTbP4A8Ix/l+A4dHDD0DGqYW6RQ+9jxkRFclaxxQb/SJAWZfWAkuyeQUytO7+7N4QKrDh+drA==" crossorigin="" />
+    <!--Needed for Chart D3.js/C3.js-->
+    <script src="https://d3js.org/d3.v5.min.js"></script>
+    <script src="lib/js/c3.min.js"></script>
+    <link rel="stylesheet" href="lib/css/c3.min.css" />
+
+    <script src="js/tabs.js"></script>
+
+    <!-- Custom CSS -->
+    <link rel="stylesheet" href="css/style.css" />
+    <link rel="stylesheet" href="css/tabs.css" />
   </head>
 
 
-  <body class="bg-black-60 white-80 avenir fw5">
+
+
+  <body class="bg-white black">
+
     <nav id="navbar">
-        <div w3-include-html="html/navbar.html"></div>
+      <div w3-include-html="html/navbar.html"></div>
     </nav>
-    <p> Coming soon ... </p>
-    
 
+    <div class="w3-twothird" id="maps">
+      <div id="mouse_tip"></div>
+      <div id="map1" class="map"></div>
+      <div id="map1_text" class="map_text">
+        <h1>2019</h1>
+      </div>
+      <hr class="map-diff-line" />
+      <div id="map2" class="map"></div>
+      <div id="map2_text">
+        <h1>2035</h1>
+      </div>
+      <div id="map2_controls">
+        <div w3-include-html="html/pickEscenarioTAH.html"></div>
+      </div>
+    </div>
 
+    <div class="w3-third rightPanel">
+      <div id="intro_text">
+        <p>
+          Construyendo soluciones científicas para Madre de Dios: 
+          Evaluación de escenarios de desarollo futuro en la areas de Tahuamanu-Cobija
+        </p>
+      </div>
+
+      <!--OLD IAN <div id="control_panel"></div>-->
+
+      <!--Tabs-->
+      <div id="tabsPanel">
+        <div class="tab">
+          <button
+            id="defaultOpen"
+            class="tablinks"
+            onclick="openTab(event, 'Servicios')">Servicios Ecosistemicos
+          </button>
+          <button class="tablinks" onclick="openTab(event, 'Modelos')">
+            Modelos
+          </button>
+          <button class="tablinks" onclick="openTab(event, 'Escenarios')">
+            Escenarios
+          </button>
+        </div>
+
+        <!-- Tab content -->
+        <div id="Servicios" class="tabcontent">
+          <div w3-include-html="html/tab_servicios.html"></div>
+        </div>
+
+        <div id="Modelos" class="tabcontent">
+          <div w3-include-html="html/tab_method.html"></div>
+        </div>
+
+        <div id="Escenarios" class="tabcontent">
+          <div w3-include-html="html/tab_escenarios.html"></div>
+        </div>
+      </div>
+
+      <div id="mapControls">
+        <div w3-include-html="html/mapControls.html"></div>
+      </div>
+
+      <div id="chartPEM" class="chart"></div>
+    </div>
   </body>
- 
 
+  <script src="js/map/canvasLayer.js"></script>
 
-  <script>includeHTML();</script>
+  <!-- Needed for Navbar-->
+  <script>
+    includeHTML();
+  </script>
+  <script src="js/overlay.js"></script>
+
+  <script src="js/chartTAH.js"></script>
+
+  <script>
+    // Tabs: Get the element with id="defaultOpen" and click on it
+    document.getElementById("defaultOpen").click();
+  </script>
+
+  <script src="lib/js/L.Map.Sync.js"></script>
+  <script src="js/mapsTAH.js"></script>
+  <!--<script src="js/pointer/index.js"></script>-->
 </html>
