clean MAP js files + add shps for AOIs

--- a/MAP.html
+++ b/MAP.html
@@ -104,7 +104,7 @@
 			<p><label class="switch"><input type="checkbox" id='watersheds'><span class="slider"></span></label>Cuencas hidrográficas</p>
 		  
 		  	<fieldset><legend><b>Áreas de enfoque</b></legend>
-					 <p><label class="switch"><input type="checkbox" id='AOI_PEM'><span class="slider"></span></label>Alrededos de Puerto Maldonado</p>
+					 <p><label class="switch"><input type="checkbox" id='AOI_PEM'><span class="slider"></span></label>Alrededor de Puerto Maldonado</p>
 					 <p><label class="switch"><input type="checkbox" id='AOI_TAH'><span class="slider"></span></label>Tahuamanu-Cobija</p>
 			</fieldset>
 
@@ -206,11 +206,16 @@
  	 <script src="lib/js/leaflet.shpfile.js"></script>
 	 <script src="lib/js/shp.js"></script>
 
-	 <script src='js/MAP/map_styling.js'> </script>
+	 <!--<script src='js/MAP/map_styling.js'> </script>
 	 <script src='js/MAP/map.js'> </script>
 	 <script src='js/MAP/main.js'> </script>
 	 <script src='js/MAP/tabs.js'> </script>
+
+	<script src='js/map_styling.js'> </script>
+-->
 	 <script src='js/tabs.js'> </script>
+	 <script src='js/mapUtils.js'> </script>
+	 <script src='js/mapMAP.js'> </script>
 	
   <!-- Needed for Navbar-->
   <script>includeHTML();</script>
