--- a/futuroTAH.html
+++ b/futuroTAH.html
@@ -139,6 +139,9 @@
   </script>
 
   <script src="lib/js/L.Map.Sync.js"></script>
+  <script src="lib/js/leaflet.shpfile.js"></script>
+  <script src="lib/js/shp.js"></script>
+  <script src='js/mapUtils.js'> </script>
   <script src="js/mapsTAH.js"></script>
   <!--<script src="js/pointer/index.js"></script>-->
 </html>
