--- a/futuroPEM.html
+++ b/futuroPEM.html
@@ -140,6 +140,9 @@
   </script>
 
   <script src="lib/js/L.Map.Sync.js"></script>
+  <script src="lib/js/leaflet.shpfile.js"></script>
+  <script src="lib/js/shp.js"></script>
+  <script src='js/mapUtils.js'> </script>
   <script src="js/mapsPEM.js"></script>
   <!--<script src="js/pointer/index.js"></script>-->
 </html>
