--- a/about.html
+++ b/about.html
@@ -114,37 +114,37 @@
 	<div class="w3-col s2 w3-center">
 		<img src="static/photos/mg.jpg" alt="Pic" style="width:45%" class="w3-circle w3-hover-opacity">
 		<h5>Marcelo Guevara</h5>
-		<div class="center w3-text-grey"><i>Titulo</i></div>
+		<div class="center w3-text-grey"><i>Coordinator Latin America</i></div>
 	</div>
 
 	<div class="w3-col s2 w3-center">
 		<img src="static/photos/cw.png" alt="Pic" style="width:45%" class="w3-circle w3-hover-opacity">
 		<h5>Charlotte Weil</h5>
-		<div class="center w3-text-grey"><i>Titulo</i></div>
+		<div class="center w3-text-grey"><i>Científica de datos</i></div>
 	</div>
 
 	<div class="w3-col s2 w3-center">
 		<img src="static/photos/lf.jpg" alt="Pic" style="width:45%" class="w3-circle w3-hover-opacity">
 		<h5>Luis Fernandez</h5>
-		<div class="center w3-text-grey"><i>Titulo</i></div>
+		<div class="center w3-text-grey"><i>Cincia</i></div>
 	</div>
 
 	<div class="w3-col s2 w3-center">
 		<img src="static/photos/mt.png" alt="Pic" style="width:45%" class="w3-circle w3-hover-opacity">
 		<h5>Marta Torres</h5>
-		<div class="center w3-text-grey"><i>Titulo</i></div>
+		<div class="center w3-text-grey"><i>Cincia</i></div>
 	</div>
 
 	<div class="w3-col s2 w3-center">
 		<img src="static/photos/jc.png" alt="Pic" style="width:45%" class="w3-circle w3-hover-opacity">
 		<h5>Jorge Caballero</h5>
-		<div class="center w3-text-grey"><i>Titulo</i></div>
+		<div class="center w3-text-grey"><i>Cincia</i></div>
 	</div>
 
 	<div class="w3-col s2 w3-center">
 		<img src="static/photos/mp.png" alt="Pic" style="width:45%" class="w3-circle w3-hover-opacity">
 		<h5>Martin Pillaca</h5>
-		<div class="center w3-text-grey"><i>Titulo</i></div>
+		<div class="center w3-text-grey"><i>Cincia</i></div>
 	</div>
 
 	<div class="w3-quarter center w3-text-grey">
@@ -157,7 +157,7 @@
 </div>
 
 <center>
-			<h5><input type="submit" name="submit" value="Regresar al sitio" onClick="closeNav()" style="color: black;" /></h5>
+			<h4><button class='coolButton'onClick="closeNav()">Regresar al sitio</button></h4>
 
 </center>
 <br><br><br>
